fix always visible scrollbar in each dropdown element introduced in bd5601d160f8ee117103daf96c4c3739d55f3691

--- a/assembl/static/css/components/_message.scss
+++ b/assembl/static/css/components/_message.scss
@@ -550,7 +550,7 @@ $previewNumLines: 4;
       a:link, a:visited {
         color: inherit; /* so that the icon is not purple when the "a" tag has an href attribute (link) */
         text-decoration: inherit;
-        overflow: scroll;
+        overflow: auto;
       }
       > a:link, > a:visited {
         color: $txtGray1;
